@@ -5,7 +5,7 @@ rxfluxmtx - compute flux transfer matrix(es) for RADIANCE scene
 .SH SYNOPSIS
 .B rxfluxmtx
 [
-.B \-W
+.B \-v
 ][
 .B "-bj frac"
 ] [
@@ -59,7 +59,7 @@ as required by
 .I rfluxmtx.
 .PP
 The
-.I \-W+
+.I \-v+
 option turns on verbose mode, and the
 .I \-t
 option sets the number of seconds between progress reports, similar to
