@@ -1,5 +1,5 @@
 #ifndef lint
-static const char	RCSid[] = "$Id: rvmain.c,v 2.26 2025/06/20 16:34:23 greg Exp $";
+static const char	RCSid[] = "$Id$";
 #endif
 /*
  *  rvmain.c - main for rview interactive viewer
@@ -78,9 +78,7 @@ main(int argc, char *argv[])
 				goto badopt
 #define	 check_bool(olen,var)		switch (argv[i][olen]) { \
 				case '\0': var = !var; break; \
-				case 'y': case 'Y': case 't': case 'T': \
 				case '+': case '1': var = 1; break; \
-				case 'n': case 'N': case 'f': case 'F': \
 				case '-': case '0': var = 0; break; \
 				default: goto badopt; }
 	char  *octnm = NULL;
